src/tests/testfiles/unary-operators/1.txt
testfiles/unary-operators/1.c:3:5: error: invalid operand to logical '!' (have 'float', need 'int')
!f;
^
